It is correctly fetching JSON weather data by both city name and zip. It is not yet handling the error of a city not found.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>Enter a comma-separated array of cities</h3>
         <textarea id="citiesText" rows="1" cols="100"></textarea>
         <br />
-        <button id="getWeatherButton" type="button" onclick="showWeather()">Fetch the weather</button>
+        <button id="getWeatherButton" type="button" onclick="buttonWasClicked()">Fetch the weather</button>
     </div>
 </body>
 </html>
