It now handles failed api calls cleanly.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="content" class="center">
         <h1>Weather Fetcher</h1>
         <br />
-        <h3>Enter a comma-separated array of cities</h3>
+        <h3>Enter a comma-separated array of cities, using names or zip codes.</h3>
         <textarea id="citiesText" rows="1" cols="100"></textarea>
         <br />
         <button id="getWeatherButton" type="button" onclick="buttonWasClicked()">Fetch the weather</button>
